third_party/move/move-compiler-v2/tests/checking/visibility-checker/direct_visibility_err3.move
module 0x815::b {
    package 0x815::a;
}
